--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Kingdom Embassy Ohio | Prophetic Church in Columbus</title>
   <meta name="description" content="Kingdom Embassy Ohio — A House of Prayer & Prophetic Encounter, preparing the world for the 2nd coming of Christ." />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 </head>
