--- a/index.html
+++ b/index.html
@@ -83,14 +83,19 @@
 
         <div class="hero-service-times">
           <div class="service-time-card">
-            <h3>Thursday Prophetic Service</h3>
+            <h3>Sunday Worship Encounter</h3>
             <p class="service-label">Doors Open</p>
+            <p class="service-time">3:00 PM EST</p>
+          </div>
+          <div class="service-time-card">
+            <h3>Tuesday Bible Study</h3>
+            <p class="service-label">Starts</p>
             <p class="service-time">7:00 PM EST</p>
           </div>
           <div class="service-time-card">
-            <h3>Sunday Worship Encounter</h3>
-            <p class="service-label">Doors Open</p>
-            <p class="service-time">10:00 AM EST</p>
+            <h3>Thursday Prophetic Service</h3>
+            <p class="service-label">Starts</p>
+            <p class="service-time">7:00 PM EST</p>
           </div>
         </div>
       </div>
@@ -135,26 +140,24 @@
 
         <div class="grid-3">
           <div class="card service-card">
-            <h3>Thursday Prophetic Service</h3>
-            <p class="service-day">Every Thursday</p>
-            <p class="service-info">Doors open at <strong>7:00 PM EST</strong></p>
-            <p>Prophetic teaching, personal ministry, and corporate prayer.</p>
-          </div>
-
-          <div class="card service-card">
             <h3>Sunday Worship Encounter</h3>
             <p class="service-day">Every Sunday</p>
-            <p class="service-info">Doors open at <strong>10:00 AM EST</strong></p>
-            <p>Worship, Word, and prophetic ministry for the whole family.</p>
+            <p class="service-info">Doors open at <strong>3:00 PM EST</strong></p>
+            <p>An afternoon worship encounter with the Word, worship, and prophetic ministry.</p>
           </div>
 
           <div class="card service-card">
-            <h3>Special Events &amp; Conferences</h3>
-            <p class="service-day">Throughout the Year</p>
-            <p class="service-info">Times vary</p>
-            <p>
-              Revival nights, conferences, and trainings focused on prayer, prophecy, deliverance, and Kingdom living.
-            </p>
+            <h3>Tuesday Bible Study</h3>
+            <p class="service-day">Every Tuesday</p>
+            <p class="service-info">Starts at <strong>7:00 PM EST</strong></p>
+            <p>Foundational teaching, digging deeper into Scripture, and growing in the Word.</p>
+          </div>
+
+          <div class="card service-card">
+            <h3>Thursday Prophetic Service</h3>
+            <p class="service-day">Every Thursday</p>
+            <p class="service-info">Starts at <strong>7:00 PM EST</strong></p>
+            <p>Prophetic flow, personal ministry, and corporate prayer and intercession.</p>
           </div>
         </div>
       </div>
@@ -244,7 +247,7 @@
             </label>
             <label>
               Which service are you planning to attend?
-              <input type="text" name="service" placeholder="Thursday / Sunday / Other" />
+              <input type="text" name="service" placeholder="Sunday / Tuesday / Thursday" />
             </label>
             <label>
               Anything we can be praying for?
