--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
     </div>
   </header>
 
+  <!-- THIS WEEK STRIP -->
+  <section class="week-strip">
+    <div class="container week-strip-inner">
+      <p class="week-strip-title">This Week at Kingdom Embassy Ohio</p>
+      <div class="week-strip-items">
+        <span class="week-strip-item"><strong>Sunday Worship Encounter:</strong> 3:00 PM EST</span>
+        <span class="week-strip-separator">•</span>
+        <span class="week-strip-item"><strong>Tuesday Bible Study:</strong> 7:00 PM EST</span>
+        <span class="week-strip-separator">•</span>
+        <span class="week-strip-item"><strong>Thursday Prophetic Service:</strong> 7:00 PM EST</span>
+      </div>
+    </div>
+  </section>
+
   <!-- HERO -->
   <main id="top">
     <section class="hero">
