--- a/index.html
+++ b/index.html
@@ -94,24 +94,6 @@
           <a href="#visit" class="btn btn-primary">Plan Your Visit</a>
           <a href="#give" class="btn btn-outline">Give Online</a>
         </div>
-
-        <div class="hero-service-times">
-          <div class="service-time-card">
-            <h3>Sunday Worship Encounter</h3>
-            <p class="service-label">Doors Open</p>
-            <p class="service-time">3:00 PM EST</p>
-          </div>
-          <div class="service-time-card">
-            <h3>Tuesday Bible Study</h3>
-            <p class="service-label">Starts</p>
-            <p class="service-time">7:00 PM EST</p>
-          </div>
-          <div class="service-time-card">
-            <h3>Thursday Prophetic Service</h3>
-            <p class="service-label">Starts</p>
-            <p class="service-time">7:00 PM EST</p>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -216,11 +198,11 @@
           <div class="card">
             <h3>Parking &amp; Arrival</h3>
             <p>
-              We are easy to find with GPS using the address below. Our team will gladly help you find a seat.
+              We are easy to find with GPS using our church address listed in the Contact section below. Our team will gladly help you find a seat.
             </p>
             <ul class="checklist">
               <li>Arrive 10–15 minutes early.</li>
-              <li>Use “1783 Melrose Ave, Columbus, OH 43224” in your GPS.</li>
+              <li>Follow the address under “Contact” for directions.</li>
               <li>Come with expectation—God is moving.</li>
             </ul>
           </div>
@@ -289,37 +271,27 @@
             <h3>The Voice in the Wilderness</h3>
             <p class="event-meta">Recent Message</p>
             <p>Preparing a generation to hear and obey the voice of God in a noisy world.</p>
-            <a href="https://youtube.com/@keohiofamily?si=v8fVqs3jgL4N9DoY" target="_blank" class="card-link">
-              Watch on YouTube →
-            </a>
           </article>
 
           <article class="card">
             <h3>Altar of Intercession</h3>
             <p class="event-meta">Prayer &amp; Intercession</p>
             <p>Building and guarding a lifestyle of prayer that sustains revival and transformation.</p>
-            <a href="https://youtube.com/@keohiofamily?si=v8fVqs3jgL4N9DoY" target="_blank" class="card-link">
-              Watch on YouTube →
-            </a>
           </article>
 
           <article class="card">
             <h3>Preparing for His Coming</h3>
             <p class="event-meta">End-Time Focus</p>
             <p>Aligning our hearts, homes, and assignments with the return of Jesus Christ.</p>
-            <a href="https://youtube.com/@keohiofamily?si=v8fVqs3jgL4N9DoY" target="_blank" class="card-link">
-              Watch on YouTube →
-            </a>
           </article>
         </div>
 
         <div class="center" style="margin-top:1.5rem;">
           <a
-            href="https://youtube.com/@keohiofamily?si=v8fVqs3jgL4N9DoY"
-            target="_blank"
+            href="#media"
             class="btn btn-outline"
           >
-            View Full Sermon Archive
+            View Sermon Media
           </a>
         </div>
       </div>
