--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>Kingdom Embassy Ohio | Prophetic Church in Columbus</title>
   <meta name="description" content="Kingdom Embassy Ohio — A House of Prayer & Prophetic Encounter, preparing the world for the 2nd coming of Christ." />
 
+  <!-- SEO / Open Graph -->
+  <meta property="og:title" content="Kingdom Embassy Ohio | Prophetic Church in Columbus" />
+  <meta property="og:description" content="WE ARE A PEOPLE OF PRAYER PREPARING THE WORLD FOR THE 2ND COMING OF CHRIST. Join us in Columbus, Ohio for worship, prayer, and prophetic encounter." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kingdomembassyohio.com" />
+  <meta property="og:site_name" content="Kingdom Embassy Ohio" />
+  <!-- You can change this image file later once you upload an OG image -->
+  <meta property="og:image" content="https://kingdomembassyohio.com/logo-keohio.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kingdom Embassy Ohio | Prophetic Church in Columbus" />
+  <meta name="twitter:description" content="A House of Prayer & Prophetic Encounter in Columbus, Ohio — preparing the world for the 2nd coming of Christ." />
+  <meta name="twitter:image" content="https://kingdomembassyohio.com/logo-keohio.png" />
+
   <!-- Favicon -->
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -66,10 +80,28 @@
       <div class="week-strip-items">
         <span class="week-strip-item"><strong>Sunday Worship Encounter:</strong> 3:00 PM EST</span>
         <span class="week-strip-separator">•</span>
-        <span class="week-strip-item"><strong>Tuesday Bible Study:</strong> 7:00 PM EST</span>
+        <span class="week-strip-item"><strong>Tuesday Bible Study:</strong> 6:00 PM EST</span>
         <span class="week-strip-separator">•</span>
-        <span class="week-strip-item"><strong>Thursday Prophetic Service:</strong> 7:00 PM EST</span>
+        <span class="week-strip-item"><strong>Thursday Prophetic Service:</strong> 6:00 PM EST</span>
       </div>
+    </div>
+  </section>
+
+  <!-- LIVE STRIP (only shows during service times via JS) -->
+  <section class="live-strip" id="liveStrip">
+    <div class="container live-strip-inner">
+      <span class="live-dot"></span>
+      <span class="live-text">
+        We are live now on YouTube.
+      </span>
+      <a
+        href="https://youtube.com/@keohiofamily?si=v8fVqs3jgL4N9DoY"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="live-link"
+      >
+        Watch Live on YouTube →
+      </a>
     </div>
   </section>
 
@@ -93,6 +125,13 @@
         <div class="hero-actions">
           <a href="#visit" class="btn btn-primary">Plan Your Visit</a>
           <a href="#give" class="btn btn-outline">Give Online</a>
+        </div>
+
+        <!-- NEXT SERVICE COUNTDOWN -->
+        <div class="next-service-bar" id="nextServiceBar">
+          <span class="next-service-label">Next service:</span>
+          <span class="next-service-name" id="nextServiceName"></span>
+          <span class="next-service-countdown" id="nextServiceCountdown"></span>
         </div>
       </div>
     </section>
@@ -138,21 +177,21 @@
           <div class="card service-card">
             <h3>Sunday Worship Encounter</h3>
             <p class="service-day">Every Sunday</p>
-            <p class="service-info">Doors open at <strong>3:00 PM EST</strong></p>
+            <p class="service-info">Starts at <strong>3:00 PM EST</strong></p>
             <p>An afternoon worship encounter with the Word, worship, and prophetic ministry.</p>
           </div>
 
           <div class="card service-card">
             <h3>Tuesday Bible Study</h3>
             <p class="service-day">Every Tuesday</p>
-            <p class="service-info">Starts at <strong>7:00 PM EST</strong></p>
+            <p class="service-info">Starts at <strong>6:00 PM EST</strong></p>
             <p>Foundational teaching, digging deeper into Scripture, and growing in the Word.</p>
           </div>
 
           <div class="card service-card">
             <h3>Thursday Prophetic Service</h3>
             <p class="service-day">Every Thursday</p>
-            <p class="service-info">Starts at <strong>7:00 PM EST</strong></p>
+            <p class="service-info">Starts at <strong>6:00 PM EST</strong></p>
             <p>Prophetic flow, personal ministry, and corporate prayer and intercession.</p>
           </div>
         </div>
